--- a/WEB/wwwroot/sneat/html/auth-forgot-password-basic.html
+++ b/WEB/wwwroot/sneat/html/auth-forgot-password-basic.html
@@ -27,7 +27,9 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Forgot Password Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Forgot 
+      
+      Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
 
     <meta name="description" content="" />
 
